--- a/STACollapsableTableSample/STAHeaderView.xib
+++ b/STACollapsableTableSample/STAHeaderView.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="11V-E1-qDj" customClass="HeaderView">
+        <view contentMode="scaleToFill" id="11V-E1-qDj" customClass="STAHeaderView">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -37,8 +37,8 @@
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="collapsedStatusImageView" destination="wPa-AW-bLA" id="hJ5-4G-8sd"/>
-                <outlet property="titleLabel" destination="2SY-f3-mTU" id="ksY-Sy-KUo"/>
+                <outlet property="collapsedStatusImageView" destination="wPa-AW-bLA" id="NuM-oF-bgj"/>
+                <outlet property="titleLabel" destination="2SY-f3-mTU" id="dAg-0J-NHv"/>
             </connections>
             <point key="canvasLocation" x="468" y="117.5"/>
         </view>
