--- a/STACollapsableTable/STAHeaderView.xib
+++ b/STACollapsableTable/STAHeaderView.xib
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <deployment version="2304" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,12 +17,14 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OpenTriangle" translatesAutoresizingMaskIntoConstraints="NO" id="wPa-AW-bLA">
+                    <rect key="frame" x="0.0" y="7" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="0Zk-5o-6Pa"/>
                         <constraint firstAttribute="width" constant="30" id="kk7-h7-MOy"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2SY-f3-mTU">
+                    <rect key="frame" x="38" y="11.5" width="282" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="VHz-V5-5nX"/>
                     </constraints>
@@ -29,18 +35,19 @@
             </subviews>
             <constraints>
                 <constraint firstItem="2SY-f3-mTU" firstAttribute="leading" secondItem="wPa-AW-bLA" secondAttribute="trailing" constant="8" id="0eZ-TE-ou1"/>
-                <constraint firstAttribute="trailing" secondItem="2SY-f3-mTU" secondAttribute="trailing" constant="17" id="Fu4-bP-23s"/>
+                <constraint firstItem="sEf-OG-bPg" firstAttribute="trailing" secondItem="2SY-f3-mTU" secondAttribute="trailing" id="6Dl-T1-pBV"/>
                 <constraint firstItem="2SY-f3-mTU" firstAttribute="centerY" secondItem="11V-E1-qDj" secondAttribute="centerY" id="Scq-Ce-1Wg"/>
-                <constraint firstItem="wPa-AW-bLA" firstAttribute="leading" secondItem="11V-E1-qDj" secondAttribute="leading" constant="8" id="imM-qe-J91"/>
                 <constraint firstItem="wPa-AW-bLA" firstAttribute="centerY" secondItem="11V-E1-qDj" secondAttribute="centerY" id="llM-FI-4qa"/>
+                <constraint firstItem="wPa-AW-bLA" firstAttribute="leading" secondItem="sEf-OG-bPg" secondAttribute="leading" id="nJU-RX-6NK"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <viewLayoutGuide key="safeArea" id="sEf-OG-bPg"/>
             <connections>
                 <outlet property="collapsedStatusImageView" destination="wPa-AW-bLA" id="ynu-6R-OET"/>
                 <outlet property="titleLabel" destination="2SY-f3-mTU" id="Eg9-yG-flL"/>
             </connections>
-            <point key="canvasLocation" x="468" y="117.5"/>
+            <point key="canvasLocation" x="467.19999999999999" y="116.94152923538232"/>
         </view>
     </objects>
     <resources>
